feat: enable ssr by fixing gradiant background

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,3 +8,10 @@
     --gradient-color-3: #e2d8ee;
     --gradient-color-4: #94c8ff;
 }
+
+#dark-gradient-canvas {
+    --gradient-color-1: #19202c;
+    --gradient-color-2: #0f3854;
+    --gradient-color-3: #2a2536;
+    --gradient-color-4: #1c2d3f;
+}
