feat: dark mode

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,6 +12,6 @@
 #dark-gradient-canvas {
     --gradient-color-1: #19202c;
     --gradient-color-2: #0f3854;
-    --gradient-color-3: #2a2536;
+    --gradient-color-3: #262536;
     --gradient-color-4: #1c2d3f;
 }
