feat: change dark bg color and resume file

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,8 +10,8 @@
 }
 
 #dark-gradient-canvas {
-    --gradient-color-1: #19202c;
+    --gradient-color-1: #111d46;
     --gradient-color-2: #0f3854;
-    --gradient-color-3: #262536;
-    --gradient-color-4: #1c2d3f;
+    --gradient-color-3: #2c3555;
+    --gradient-color-4: #111b38;
 }
